src/test/ui/cast-rfc0401-2.stderr
error[E0054]: cannot cast as `bool`
  --> $DIR/cast-rfc0401-2.rs:16:13
   |
LL |     let _ = 3 as bool;
   |             ^^^^^^^^^ unsupported cast
   |
   = help: compare with zero instead

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0054"
